--- a/index.html
+++ b/index.html
@@ -36,20 +36,15 @@
         font-family: 'Lora', serif;
       }
     </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.0"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+
+<!-- Custom CSS -->
+<link rel="stylesheet" href="./style.css">
+
+<!-- Optional JavaScript -->
+<script src="./script.js" defer></script>
+
 </head>
 <body class="bg-gray-100 text-gray-800">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
